[package]
name = "did_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "did_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.5"
chrono = { version = "0.4.44", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
once_cell = "1.21.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
